[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpi-cluster-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko>=3.5.1",
    "textual>=5.0.1",
    "textual-dev>=1.7.0",
    "typer>=0.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
mpi_cluster_tools = "src.main:main"
