[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mpi-cluster-tools"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko>=3.5.1",
    "textual>=5.0.1",
    "textual-dev>=1.7.0",
    "typer>=0.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
source = "vcs"

[project.scripts]
mpi_cluster_tools = "src.main:main"
